2010-03-16  Jb Evain  <jbevain@novell.com>

	* ThreadPool.cs, Thread.cs, ExecutionContext.cs: use MOONLIGHT
	symbol to disambiguate MonoTouch and Moonlight code.

2010-03-08  Jérémie Laval  <jeremie.laval@gmail.com>

	* SpinLock.cs: Merge algorithm back in SpinLock struct

2010-03-08  Jérémie Laval  <jeremie.laval@gmail.com>

	* SpinLock.cs: Update to use ticket spinlock algorithm

2010-02-26 Rodrigo Kumpera  <rkumpera@novell.com>

	* LazyThreadSafetyMode.cs: Added.

2010-02-08  Zoltan Varga  <vargaz@gmail.com>

	* WaitHandle.cs (CheckArray): Check that the handles array is not null.
	Fixes #576039.

2010-02-02  Jérémie Laval  <jeremie.laval@gmail.com>

	* CancellationToken.cs:
	* CancellationTokenSource.cs:
	* ManualResetEventSlim.cs:
	* SemaphoreSlim.cs:
	* SpinLock.cs:
	* SpinWait.cs:
	* ThreadLocal.cs: Port to .NET 4 beta 2 API

2009-12-09  Jb Evain  <jbevain@novell.com>

	* ThreadPool.cs (QueueUserWorkItem): properly throw
	an ANE instead of triggering a NRE when being passed a null callback.

2009-11-02  Miguel de Icaza  <miguel@novell.com>

	* Jumbo patch to drop support for pre-NET_2_0 code:

	Remove ONLY_1_1 code
	Remove NET_1_0 only code
	Remove NET_2_0 defines assuming the value is true.

2009-11-02  Sebastien Pouliot  <sebastien@ximian.com>

	* Thread.cs (set_CurrentUICulture): Delay setting in_currentculture
	to true until after the null check and the return statement.

2009-11-02  Jérémie Laval  <jeremie.laval@gmail.com>

	* Parallel.cs: Added fix for Bug #536919.

2009-10-25  Sebastien Pouliot  <sebastien@ximian.com>

	* Thread.cs: Fix validations for Join and Sleep overloads

2009-10-22  Sebastien Pouliot  <sebastien@ximian.com>

	* EventWaitHandle.cs: Add validation on the EventResetMode 
	parameter used in the constructors
	* Monitor.cs: Fix validations for TryEnter and Wait. Reduce 
	duplicated code between overloads.

2009-10-21  Sebastien Pouliot  <sebastien@ximian.com>

	* WaitHandle.cs: Add missing validations for 'millisecondsTimeout'